--- a/sass/style.scss
+++ b/sass/style.scss
@@ -170,23 +170,20 @@ h1 {
 
 .box {
   color: black;
-
-  text-align: center;
 }
 
 .box i {
   font-size: 30px;
   background: #f1f2f6;
-  width: 60px;
   height: 60px;
-  padding-top: 12px;
+  width: 60px;
   color: #f1c40f;
   border-radius: 50%;
   border-color: #f1c40f;
-  display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   border: 3px solid;
-  margin-left: 70px;
+  padding-top: 12px;
+  padding-left: 9px;
 }
 
 .text {
@@ -194,7 +191,6 @@ h1 {
   padding: 5px;
   color: #747d8c;
   font-style: italic;
-  margin-left: 16px;
 }
 h3 {
   text-align: center;
