--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,12 +3,14 @@
 *::after {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   font-size: 13px;
   font-family: Arial, Helvetica, sans-serif;
-  color: white;
+  color: black;
 }
+
 .container {
   max-width: 1140px;
   padding-left: 5px;
@@ -18,10 +20,12 @@ body {
   border: 1px;
   margin: auto;
 }
+
 .section {
   padding-bottom: 96px;
   padding-top: 96px;
 }
+
 .navbar-wrap {
   background-image: url('http://pixnio.com/free-images/2017/08/24/2017-08-24-07-23-50-1000x658.jpg');
   background-size: cover;
@@ -32,10 +36,10 @@ body {
 .navigation {
   padding: 42px 0 42px 0;
 }
+
 .logo-header {
   position: absolute;
   top: 12px;
-
   width: 100px;
 }
 
@@ -52,6 +56,7 @@ body {
   margin-left: 36px;
   position: relative;
 }
+
 .navigation li li {
   width: 50px;
   margin: 0;
@@ -84,14 +89,6 @@ body {
 }
 
 /**header**/
-
-.splash {
-  display: flex;
-
-  color: #ffffff;
-  min-height: 500px;
-}
-
 .splash-inner {
   margin: auto;
   max-width: 70%;
@@ -114,10 +111,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
 }
+
 .page-title span {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: blue;
 }
+
 .btn {
   display: block;
   align-items: center;
@@ -135,6 +134,7 @@ body {
   background-position: 100% 0;
   background-size: 300%;
 }
+
 .btn:hover {
   background-position: 0 100%;
 }
@@ -166,6 +166,8 @@ h1 {
   font-size: 20px;
   font-style: italic;
   color: #747d8c;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .box {
@@ -192,8 +194,25 @@ h1 {
   color: #747d8c;
   font-style: italic;
 }
-h3 {
-  text-align: center;
+
+.card-title {
   font-weight: bold;
   color: black;
+}
+.card-body {
+  font-size: large;
+  padding: 5px;
+  color: #747d8c;
+  font-style: italic;
+  text-align: center;
+}
+
+.card img {
+  height: 300px;
+}
+.portfolio {
+  background-color: #dfe4ea;
+}
+.footer-paragraph {
+  margin-top: 12px;
 }
