--- a/sass/style.scss
+++ b/sass/style.scss
@@ -207,7 +207,7 @@ section h1 {
 }
 .card-body {
   font-size: large;
-  padding: 5px;
+  padding: auto;
   color: #747d8c;
   font-style: italic;
   text-align: center;
