--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,7 +86,7 @@ body {
 .page-subtitle {
   margin: 24px 0;
   font-weight: 400;
-  font-size: 72px;
+  font-size: 24px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
@@ -218,13 +218,10 @@ section footer {
   line-height: 50px;
   display: flex;
   justify-content: space-around;
-  margin-left: 50px;
 }
 
 @media (min-width: 576px) {
-  .menu {
-    justify-content: end;
-    flex-direction: row;
-    color: black;
+  .page-subtitle {
+    font-size: 72px;
   }
 }
